# RubySapphireRecomp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
src/: game_launcher_boot.cpp  game_launcher_boot.h  main.cpp
tools/: make_release.ps1
tools/import_decomp_symbols/: import_decomp_symbols.py
tools/verify_rom_hash/: main.cpp
variants/ruby/: game.toml
variants/ruby/config/: ruby_usa.toml
variants/ruby/launcher/: boxart.tga
variants/ruby/symbols/: function_boundaries.tsv  imported_data_symbols.tsv  imported_symbols.tsv  ruby_usa.toml
variants/sapphire/: game.toml
variants/sapphire/config/: sapphire_usa.toml
variants/sapphire/launcher/: boxart.tga
variants/sapphire/symbols/: function_boundaries.tsv  imported_data_symbols.tsv  imported_symbols.tsv  sapphire_usa.toml
